--- a/package.json
+++ b/package.json
@@ -5,11 +5,22 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "npm run build && next export && touch out/.nojekyll",
+    "serve": "npm run export && serve out",
+    "deploy": "npm run export && node gh-pages.js"
   },
   "dependencies": {
+    "dayjs": "^1.9.1",
+    "gh-pages": "^3.1.0",
     "next": "9.5.5",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "serve": "^11.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.8",
+    "@types/react": "^16.9.52",
+    "typescript": "^4.0.3"
   }
 }
