--- a/package.json
+++ b/package.json
@@ -8,19 +8,32 @@
     "start": "next start",
     "export": "npm run build && next export && touch out/.nojekyll",
     "serve": "npm run export && serve out",
-    "deploy": "npm run export && node gh-pages.js"
+    "deploy": "npm run export && node gh-pages.js",
+    "deploy-storybook": "storybook-to-ghpages",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.4",
     "dayjs": "^1.9.1",
     "gh-pages": "^3.1.0",
     "next": "9.5.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@storybook/addon-actions": "^6.0.26",
+    "@storybook/addon-essentials": "^6.0.26",
+    "@storybook/addon-links": "^6.0.26",
+    "@storybook/react": "^6.0.26",
+    "@storybook/storybook-deployer": "^2.8.7",
     "@types/node": "^14.11.8",
     "@types/react": "^16.9.52",
+    "babel-loader": "^8.1.0",
+    "react-is": "^16.13.1",
     "typescript": "^4.0.3"
   }
 }
