--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "export": "npm run build && next export && touch out/.nojekyll",
     "serve": "npm run export && serve out",
     "deploy": "npm run export && node gh-pages.js",
-    "deploy-storybook": "storybook-to-ghpages --branch=master",
+    "deploy-storybook": "storybook-to-ghpages",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.162",
     "@types/styled-components": "^5.1.4",
     "dayjs": "^1.9.1",
+    "framer-motion": "^2.9.1",
     "gh-pages": "^3.1.0",
+    "lodash": "^4.17.20",
     "next": "9.5.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
